tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_enums_error_with_duplicate_enum_variant/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Duplicate definitions of enum variant with name Bar found
  ┌─ src/main.nr:3:9
  │
3 │         Bar(i32),
  │         --- First enum variant found here
4 │         Bar(u8),
  │         --- Second enum variant found here
  │

Aborting due to 1 previous error
